--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.1",
     "vue": "^2.6.11",
     "vue-drag-resize": "^1.4.2",
     "vue-router": "^3.2.0",
