--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-drag-resize": "^1.4.2",
     "vue-router": "^3.2.0",
+    "vue-ruler-tool": "^1.2.4",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
