--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.1",
     "vue": "^2.6.11",
     "vue-drag-resize": "^1.4.2",
     "vue-router": "^3.2.0",
+    "vue-ruler-tool": "^1.2.4",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
